finish the project

--- a/model/main.ipynb
+++ b/model/main.ipynb
@@ -1902,34 +1902,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:green'>Before and after outlier removal: Rajaji Nagar</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"rajaji_nagar_outliers.png\"></img>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style='color:green'>Before and after outlier removal: Hebbal</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"hebbal_outliers.png\"></img>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -3303,7 +3275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -3342,32 +3314,27 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>lasso</td>\n",
-       "      <td>0.726738</td>\n",
-       "      <td>{'alpha': 2, 'selection': 'cyclic'}</td>\n",
+       "      <td>0.726739</td>\n",
+       "      <td>{'alpha': 2, 'selection': 'random'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>decision_tree</td>\n",
-       "      <td>0.716064</td>\n",
-       "      <td>{'criterion': 'friedman_mse', 'splitter': 'best'}</td>\n",
+       "      <td>0.711504</td>\n",
+       "      <td>{'criterion': 'mse', 'splitter': 'random'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               model  best_score  \\\n",
-       "0  linear_regression    0.847796   \n",
-       "1              lasso    0.726738   \n",
-       "2      decision_tree    0.716064   \n",
-       "\n",
-       "                                         best_params  \n",
-       "0                               {'normalize': False}  \n",
-       "1                {'alpha': 2, 'selection': 'cyclic'}  \n",
-       "2  {'criterion': 'friedman_mse', 'splitter': 'best'}  "
+       "               model  best_score                                 best_params\n",
+       "0  linear_regression    0.847796                        {'normalize': False}\n",
+       "1              lasso    0.726739         {'alpha': 2, 'selection': 'random'}\n",
+       "2      decision_tree    0.711504  {'criterion': 'mse', 'splitter': 'random'}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3433,7 +3400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3452,16 +3419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "83.86570258311222"
+       "83.86570258312369"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3472,16 +3439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "86.08062284985995"
+       "86.08062284987133"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3492,16 +3459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "193.31197733179556"
+       "193.3119773317997"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3512,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 120,
    "metadata": {
     "scrolled": true
    },
@@ -3520,10 +3487,10 @@
     {
      "data": {
       "text/plain": [
-       "195.52689759854331"
+       "195.5268975985474"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3541,7 +3508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3559,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
